--- a/src/components/pokemon-list/style.scss
+++ b/src/components/pokemon-list/style.scss
@@ -10,3 +10,11 @@
   width: 100%;
   }
 }
+
+.loading-container {
+  min-width: 400px;
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
