--- a/src/components/search-bar/style.scss
+++ b/src/components/search-bar/style.scss
@@ -11,7 +11,6 @@
     font-size: 16px;
     width: 100%;
     padding-left: 6px;
-
     border-radius: 4px 0 0 4px;
   }
   input:focus{
@@ -25,5 +24,6 @@
     display: flex;
     align-items: center;
     color: $yellow;
+    cursor: pointer;
   }
 }
